# factorio_AI_solver

./: .gitignore  CMakeLists.txt  README.md  requirements.txt  run_tests.sh
src/benchmarks/: bench_bfs.py
src/cpp/: bfs_module.cpp  debug.h
src/game_env/: state.py
src/tests/: test_bfs.py
